tests/data/placebo/test_vpc_delete/ec2.DeleteInternetGateway_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RequestId": "84bae318-b167-4ef8-86b3-092806f35a1a", 
            "HTTPStatusCode": 200, 
            "RetryAttempts": 0, 
            "HTTPHeaders": {
                "date": "Wed, 15 May 2019 15:30:48 GMT", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2", 
                "content-length": "243"
            }
        }
    }
}
