tests/data/placebo/test_vpc_delete/ec2.DeleteRouteTable_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RequestId": "2a62e2de-cf29-47ec-affd-b32d005c20aa", 
            "HTTPStatusCode": 200, 
            "RetryAttempts": 0, 
            "HTTPHeaders": {
                "date": "Wed, 15 May 2019 15:30:49 GMT", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2", 
                "content-length": "233"
            }
        }
    }
}
