tests/data/placebo/test_vpc_delete/ec2.DeleteSubnet_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RequestId": "728dbe4b-6b8b-4d6a-a8d1-098a690843ea", 
            "HTTPStatusCode": 200, 
            "RetryAttempts": 0, 
            "HTTPHeaders": {
                "date": "Wed, 15 May 2019 15:30:48 GMT", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2", 
                "content-length": "225"
            }
        }
    }
}
