tests/data/placebo/test_vpc_delete/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-0bc202959ab1c430e", 
                "Description": "default VPC security group", 
                "VpcId": "vpc-0a052574e7ad26482", 
                "GroupName": "default", 
                "OwnerId": "123456789012", 
                "IpPermissionsEgress": [
                    {
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "Ipv6Ranges": [], 
                        "UserIdGroupPairs": [], 
                        "IpProtocol": "-1"
                    }
                ], 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "IpRanges": [], 
                        "Ipv6Ranges": [], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "123456789012", 
                                "GroupId": "sg-0bc202959ab1c430e"
                            }
                        ], 
                        "IpProtocol": "-1"
                    }
                ]
            }
        ], 
        "ResponseMetadata": {
            "RequestId": "63b421c4-d1aa-4849-93c7-a68ac1f22a3a", 
            "HTTPStatusCode": 200, 
            "RetryAttempts": 0, 
            "HTTPHeaders": {
                "date": "Wed, 15 May 2019 15:30:49 GMT", 
                "transfer-encoding": "chunked", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2", 
                "vary": "accept-encoding"
            }
        }
    }
}
