tests/data/placebo/test_vpc_delete/ec2.DescribeVpcs_1.json
{
    "status_code": 200, 
    "data": {
        "Vpcs": [
            {
                "CidrBlock": "10.0.0.0/16",
                "DhcpOptionsId": "dopt-a5235ede",
                "State": "available",
                "VpcId": "vpc-0cc1f28fcc3977440",
                "InstanceTenancy": "default",
                "CidrBlockAssociationSet": [
                    {
                        "AssociationId": "vpc-cidr-assoc-0996657888d869b51",
                        "CidrBlock": "10.0.0.0/16",
                        "CidrBlockState": {
                            "State": "associated"
                        }
                    }
                ],
                "IsDefault": false,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "c7n-vpc-delete-test"
                    }
                ]
            }
        ],
        "ResponseMetadata": {
            "RequestId": "7bb39e28-f67a-437d-9cd6-3de6e6e1ef5d", 
            "HTTPStatusCode": 200, 
            "RetryAttempts": 0, 
            "HTTPHeaders": {
                "date": "Wed, 15 May 2019 15:30:47 GMT", 
                "transfer-encoding": "chunked", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2", 
                "vary": "accept-encoding"
            }
        }
    }
}
