tests/data/placebo/test_vpc_delete/ec2.DescribeVpcs_2.json
{
    "status_code": 200,
    "data": {
        "Vpcs": [],
        "ResponseMetadata": {}
    }
}
