tests/data/placebo/test_vpc_delete/ec2.DetachInternetGateway_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RequestId": "36d096b2-5a82-45ae-8994-503b17442371", 
            "HTTPStatusCode": 200, 
            "RetryAttempts": 0, 
            "HTTPHeaders": {
                "date": "Wed, 15 May 2019 15:30:48 GMT", 
                "content-type": "text/xml;charset=UTF-8", 
                "server": "AmazonEC2", 
                "content-length": "243"
            }
        }
    }
}
